tests/error/misc_errors/implicit_module_error.py
from guppylang import guppy


@guppy
def foo() -> int:
    return 1.0


guppy.compile_module()
