tests/error/misc_errors/implicit_module_error.err
Error: Type mismatch (at $FILE:6:11)
  | 
4 | @guppy
5 | def foo() -> int:
6 |     return 1.0
  |            ^^^ Expected return value of type `int`, got `float`

Guppy compilation failed due to 1 previous error
